--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <link rel="stylesheet" href="assets/smart-cart/minicart-theme.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/as-pie-progress/css/progress.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;400;500;600;700;800&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;400;500;600;700;800&display=swap&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Manrope:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -642,7 +644,7 @@
             <p class="mbr-text mbr-semibold mbr-fonts-style display-4">Sign up for our Newsletter!</p>
                 <div class="subscribe_form" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="N+Y9bdks1PKlfXqwOZ54hLwaYpA8iksIDVbUKBn3KxZVrfQRTVXFVJ1TTHMbSNx68/HcZvnlfc0PPeecXzWk6qN9AqsgyBrSn7eXYRd2fIJFOK4xr6W74E4SsEfHb2YB.wmVp3UNc2ZChVZ/oiU7QNs6RyIYm2bXzJftXHpUCgTpP169LFPxh2FJe1zR4zl9wCDFTwAsVU0ax90PtUUf0ius5MFGai4BYZcL4k/5fttuZIVZnRUlISe2q7t/jNk+2">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NCRGCI32zzyvxVZ21E1G1XY1/yKo7cOg0w/UH9iqFECI3ilEBdFw/DNrl0Bnedkvv/41Ip4CY/sex/LnYqXzUQsbI6/nWJTvl9zEL79VQYDAEhRtZiyxbUInNlBdMwCm.V5ztnFc+VFN31TEmZ1Bmn2ahp7qAB6B+IaQUl0UFKvAGOKODhs+7ORExiB/AyARRKAjMs0W4s2NiKtKFffuqtSk/aLTZeHgH+YsfnmyAEV66wOSR6ZjyHk+39dq/XbfY">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -679,7 +681,7 @@
     </div>
 </section>
 
-<section class="footer1 cid-sa6vGT8lx1" once="footer" id="footer1-e">
+<section class="footer1 cid-sa6vGT8lx1 mbr-reveal" once="footer" id="footer1-e">
 
     
 
@@ -755,6 +757,7 @@
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="assets/formoid.min.js"></script>
   
   
   
